# cc-plugin-ugrid

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  checks.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  roadmap.md  setup.cfg  setup.py
.github/workflows/: pypi.yml  tests.yml
.pytest_cache/v/cache/: lastfailed
cc_plugin_ugrid/: __init__.py  _version.py  checker.py  checker_10.py  checker_10_refactor.py  checker_10_test.py  checker_20.py
cc_plugin_ugrid/resources/: adcirc.cdl  adcirc.nc4  fvcom.cdl  fvcom.nc  fvcom_reference.cdl  ugrid.cdl  ugrid.nc
cc_plugin_ugrid/tests/: checker_test.py  test_checker.py
