[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "cc-plugin-ugrid"
description = "UGRID plugin for the IOOS Compliance Checker Plugin"
readme.content-type = "text/markdown"
readme.file = "README.md"
license = { text = "Apache-2.0" }
maintainers = [
  { name = "Brian McKenna", email = "brian.mckenna@rpsgroup.com" },
  { name = "Filipe Fernandes" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "http://ioos.github.io/compliance-checker/"
urls.homepage = "https://github.com/ioos/cc-plugin-ugrid"
urls.repository = "https://github.com/ioos/cc-plugin-ugrid"
entry-points."compliance_checker.suites"."ugrid" = "cc_plugin_ugrid.checker:UgridChecker"

[tool.setuptools]
packages = [ "cc_plugin_ugrid" ]
include-package-data = true
license-files = [ "LICENSE.txt" ]

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "cc_plugin_ugrid/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
line-length = 147

lint.select = [ "ALL" ]

lint.ignore = [
  "ANN",     # Missing type annotation
  "COM812",  # missing-trailing-comma
  "D107",    # Missing docstring in `__init__`
  "D203",    # one-blank-line-before-class
  "D211",    # Ignoring `one-blank-line-before-class`
  "D213",    # multi-line-summary-second-line.
  "ERA001",  # Found commented-out code
  "ISC001",  # single-line-implicit-string-concatenation
  "N801",    # Class name should use CapWords convention
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "TRY301",  # Abstract `raise` to an inner function
]

lint.extend-per-file-ignores."cc_plugin_ugrid/tests/*.py" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "D100",   # Missing docstring in public module
  "D101",   #  Missing docstring in public class
  "D102",   # Missing docstring in public method
  "D104",   # Missing docstring in public package
  "D105",   # Missing docstring in magic method
  "D107",   # Missing docstring in `__init__`
  "D205",   # 1 blank line required between summary line and description
  "INP001", # File is part of an implicit namespace package
  "PD901",  # Avoid using the generic variable name `df` for DataFrames
  "S101",   # Use of assert detected
  "SLF001", # Private member accessed
]

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "Makefile",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error:::cc-plugin-ugrid.*",
  "ignore::UserWarning",
  "ignore::RuntimeWarning",
]

[tool.interrogate]
fail-under = 79
exclude = [ "docs", "build" ]
verbose = 0
quiet = false
color = true
omit-covered-files = false
